<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.welcome.WelcomeFragment">


<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:srcCompat="@drawable/th"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_or_create_account"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/continue1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"/>

        <Button
            android:id="@+id/not_logged_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/not_logged_in"/>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textField1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:endIconMode="password_toggle"-->
<!--            app:boxCornerRadiusBottomEnd="16dp"-->
<!--            app:boxCornerRadiusTopEnd="16dp"-->
<!--            app:boxCornerRadiusBottomStart="16dp"-->
<!--            app:boxCornerRadiusTopStart="16dp"-->
<!--            android:hint="密码">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPassword"-->
<!--                />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

    </LinearLayout>
</FrameLayout>