<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/login_or_signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录或创建帐户"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_or_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/forget_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>